eventBrokerSink/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: event-broker-sink
  name: event-broker-sink
  # namespace: gitops-kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-broker-sink
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: event-broker-sink
    spec:
      imagePullSecrets:
      - name: artifactory-secret
      containers:
      - image: artifactory-artifactory.apps.xnkpeyx0.canadacentral.aroapp.io/gitops-local/eventbrokersink:latest
        name: event-broker-sink
        resources: {}
status: {}
