eventBrokerSink/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: event-broker-sink
  name: event-broker-sink
  # namespace: gitops-kustomize
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: event-broker-sink
  type: ClusterIP
status:
  loadBalancer: {}
